<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_RAW_IO" Id="{e07ab139-f9f1-41d2-9235-2f9c0245530d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	(*
// inputs
	stIn		:	ST_In;
	stRawIn		:	ST_RawIn;

// outputs
	stOut		:	ST_Out;
	stRawOut	:	ST_RawOut;	
	
// state machine internals, useful for debugging
	stStatus	: 	ST_Status;
	
// machine controls
	stCtrl		:	ST_Ctrl;
	*)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>